--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.less
@@ -1,3 +1,10 @@
+.requests-list-component {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
 .aho-requests-list {
   position: relative;
 }
