--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests-list/aho-requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests-list/aho-requests-list.component.less
@@ -4,6 +4,7 @@
 .aho-requests-list {
   display: flex;
   flex-direction: column;
+  flex: 1;
 
   table tbody {
     font-family: "Segoe UI";
@@ -96,8 +97,11 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    justify-content: center;
+    align-items: center;
     font-family: "Segoe UI Light";
-    font-size: 30px;
+    font-size: 24px;
     text-align: center;
+    color: #bdbdbd;
   }
 }
