--- a/projects/aho-requests/src/styles.less
+++ b/projects/aho-requests/src/styles.less
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.css';
+@import './styles/sign-in-dialog';
 @import './styles/reqiest-details-tabs';
 @import './styles/request-details-list';
 
