CORE: sign in modified

--- a/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.less
+++ b/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.less
@@ -1,3 +1,15 @@
+.mat-form-field {
+  .mat-icon {
+    cursor: pointer;
+  }
+
+  &.mat-form-field-disabled {
+    .mat-icon {
+      color: #b0bec5;
+    }
+  }
+}
+
 .reminder {
   font-family: "Segoe UI Light";
   font-size: 16px;
