--- a/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
+++ b/projects/kolenergo-core/src/lib/authentication/components/sign-in/sign-in.component.html
@@ -1,10 +1,11 @@
 <!-- Start: Индикатор загрузки данных с сервера -->
 <mat-progress-bar mode="indeterminate"
-                  color="accent">
+                  color="accent"
+                  [ngStyle]="{'opacity': !(isAuthenticationInProgress$ | async) ? '0' : '1'}">
 </mat-progress-bar>
 <!-- End: Индикатор загрузки данных с сервера -->
 
-<div class="d-flex flex-column" style="box-sizing: border-box">
+<div class="d-flex flex-column p-4" style="box-sizing: border-box">
   <div matDialogTitle>Авторизация</div>
   <div matDialogContent>
     <!-- Start: Учетная запись -->
@@ -18,7 +19,6 @@
                formControlName="account"
                placeholder="Введите учетную запись"
                required>
-        <mat-icon matSuffix color="primary">account_box</mat-icon>
         <mat-error *ngIf="signInForm.controls['account'].invalid">{{getFormErrorMessage('account')}}</mat-error>
       </mat-form-field>
       <!-- End: Учетная запись -->
@@ -31,11 +31,17 @@
         [hideRequiredMarker]="true">
         <mat-label>Пароль</mat-label>
         <input matInput
-               type="password"
+               type="{{showPassword ? 'text' : 'password'}}"
                formControlName="password"
-               placeholder="Пароль"
+               placeholder="Введите пароль"
                required>
-        <mat-icon matSuffix color="primary">visibility_off</mat-icon>
+        <mat-icon matSuffix
+                  color="primary"
+                  matTooltip="{{showPassword ? 'Скрыть пароль' : 'Показать пароль'}}"
+                  matTooltipPosition="above"
+                  (click)="showHidePassword()">
+          {{showPassword ? 'visibility' : 'visibility_off'}}
+        </mat-icon>
         <mat-error *ngIf="signInForm.controls['password'].invalid">{{getFormErrorMessage('password')}}</mat-error>
       </mat-form-field>
       <!-- End: Пароль -->
@@ -44,16 +50,10 @@
       <button mat-stroked-button
               type="submit"
               color="primary"
-              class="w-100"
+              class="w-100 pt-1 pb-1"
               [disabled]="signInForm.invalid || (isAuthenticationInProgress$ | async)"
               (click)="signIn()">
         <div class="d-flex justify-content-center align-items-center">
-          <mat-spinner *ngIf="(isAuthenticationInProgress$ | async)"
-                       color="primary"
-                       diameter="15"
-                       class="mr-3"
-                       mode="indeterminate">
-          </mat-spinner>
           <span>Войти</span>
         </div>
       </button>
