AHO: request details component modified

--- a/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
@@ -22,21 +22,33 @@
         <mat-tab>
           <ng-template mat-tab-label>
             <mat-icon class="example-tab-icon">info</mat-icon>
-            <span class="label">Содержание</span>
+            <span class="label d-none d-md-flex">Содержание</span>
+            <span class="label d-flex d-md-none">О заявке</span>
           </ng-template>
           <div class="row no-gutters h-100" *ngIf="(selectedRequest$ | async) as request">
             <div class="col-12 h-100">
               <div class="row h-100 no-gutters">
 
-                <div class="col-4 height-100 d-flex flex-column p-3" style="background: #eeeeee;">
+                <div class="col-12 col-md-5 col-xl-4 height-100 d-flex flex-column p-3" style="background: #eeeeee;">
 
-                  <div class="request-meta-info mb-3"
-                       [ngStyle]="{'background': 'linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(' + request.type.imageUrl + ')'}">
-                    <span class="primary">Заявка #{{request.id}}</span>
-                    <span class="secondary">от {{request.dateCreatedD | date:'dd.MM.yyyy в hh:mm'}}</span>
+                  <div class="request-meta-info mb-3 d-none d-md-flex"
+                       [ngStyle]="{'background': 'url(' + request.type.imageUrl + ')'}">
+                    <div class="label mat-elevation-z1">
+                      <span class="primary">Заявка #{{request.id}}</span>
+                      <span class="secondary">от {{request.dateCreatedD | date:'dd.MM.yyyy в hh:mm'}}</span>
+                    </div>
                   </div>
 
-                  <mat-list>
+                  <mat-list class="request-details-list">
+
+                    <!-- Start: Номер заявки и дата подачи -->
+                    <h3 matSubheader class="d-flex d-md-none">Информация о заявке</h3>
+                    <mat-list-item class="d-flex d-md-none">
+                      <mat-icon matListIcon color="primary">info</mat-icon>
+                      <h4 matLine>Заявка #{{request.id}}</h4>
+                      <p matLine class="text-muted">от {{request.dateCreatedD | date:'dd.MM.yyyy в HH:mm'}}</p>
+                    </mat-list-item>
+                    <!-- End: Номер заявки и дата подачи -->
 
                     <!-- Start: Категория заявки -->
                     <h3 matSubheader class="">Категория заявки</h3>
@@ -48,8 +60,8 @@
                     <!-- End: Категория заявки -->
 
                     <!-- Start: Срок исполнения заявки -->
-                    <h3 matSubheader>Срок исполнения</h3>
-                    <mat-list-item>
+                    <h3 matSubheader *ngIf="request.dateExpiresD">Срок исполнения</h3>
+                    <mat-list-item *ngIf="request.dateExpiresD">
                       <mat-icon matListIcon color="primary">calendar_today</mat-icon>
                       <h4 matLine>{{request.dateExpiresD | date:'dd MMMM yyyy'}}</h4>
                       <p matLine class="text-danger" *ngIf="request.isExpired">Просрочено</p>
@@ -69,6 +81,14 @@
                     </mat-list-item>
                     <!-- End: Инициатор / автор заявки -->
 
+                    <!-- Start: Местоположение -->
+                    <h3 matSubheader class="">Кабинет</h3>
+                    <mat-list-item>
+                      <mat-icon matListIcon color="primary">location_on</mat-icon>
+                      <h4 matLine>{{request.room}}</h4>
+                    </mat-list-item>
+                    <!-- End: Местоположение -->
+
                     <!-- Start: Контактный телефон -->
                     <h3 matSubheader class="">Контактный телефон</h3>
                     <mat-list-item>
@@ -86,7 +106,7 @@
                         {{inAddEmployeeMode ? 'Отмена' : 'Добавать исполнителя'}}
                       </span>
                     </h3>
-                    <mat-list-item *ngIf="request.employees.length === 0 && !(user$| async).permissions.getRoleByCode('aho_requests_administrator')">
+                    <mat-list-item *ngIf="request.employees.length === 0">
                       <h4 matLine class="text-muted">Не назначен</h4>
                     </mat-list-item>
                     <div *ngIf="!(user$| async).permissions.getRoleByCode('aho_requests_administrator')">
@@ -97,12 +117,12 @@
                       </mat-list-item>
                     </div>
 
-                    <div class="user-list border-bottom mb-2" *ngIf="(user$| async).permissions.getRoleByCode('aho_requests_administrator')">
+                    <div class="user-list border-bottom" *ngIf="(user$| async).permissions.getRoleByCode('aho_requests_administrator') && request.employees.length > 0">
                       <div class="user-item" *ngFor="let employee of request.employees">
                         <!-- Start: Информация о пользователе -->
                         <div class="user-details">
                           <div class="user-avatar">
-                            <span *ngIf="!employee.photo">{{employee.firstName[0] + employee.lastName[0]}}</span>
+                            <span class="initials" *ngIf="!employee.photo">{{employee.firstName[0] + employee.lastName[0]}}</span>
                           </div>
                           <div class="user-description">
                             <div class="primary-label">{{employee.firstName + ' ' + employee.lastName}}</div>
@@ -137,7 +157,7 @@
                     <!-- Start: Исполнители -->
 
                     <!-- Start: Статус заявки -->
-                    <h3 matSubheader class="">Статус заявки</h3>
+                    <h3 matSubheader class="mt-2">Статус заявки</h3>
                     <mat-list-item>
                       <mat-icon matListIcon
                                 fontSet="far"
@@ -151,9 +171,14 @@
 
                   </mat-list>
 
+                  <div class="mt-3 p-3 border-top">
+                    <button mat-stroked-button *ngIf="isRequestChanged">Сохранить</button>
+                    <button mat-stroked-button color="warn" *ngIf="isRequestChanged">Отмена</button>
+                  </div>
+
                 </div>
 
-                <div class="col-8 pl-3 pt-3 pb-3">
+                <div class="col-md-7 col-xl-8 pl-3 pt-3 pb-3">
                   <mat-selection-list class="request-details-tasks pt-0">
                     <mat-list-option *ngFor="let task of request.tasks">
                       <span matLine>{{task.content.title}}</span>
@@ -168,6 +193,13 @@
           </div>
         </mat-tab>
         <!-- End: Вкладка с информацией о заявке -->
+
+        <mat-tab>
+          <ng-template mat-tab-label class="d-flex d-md-none">
+            <mat-icon class="example-tab-icon">info</mat-icon>
+            <span class="label">Задачи</span>
+          </ng-template>
+        </mat-tab>
 
         <!-- Start: Вкладка с комментариями к заявке -->
         <mat-tab>
