--- a/projects/aho-requests/src/styles/request-details-list.less
+++ b/projects/aho-requests/src/styles/request-details-list.less
@@ -16,3 +16,20 @@
     }
   }
 }
+
+.mat-list {
+  &.request-details-list {
+    .mat-icon {
+      &.mat-list-icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        padding: 5px;
+        box-sizing: border-box;
+        background: #e0e0e0;
+      }    
+    }
+  }
+}
