--- a/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.less
@@ -18,17 +18,27 @@
   background-size: cover !important;
   border-radius: 4px;
 
+  .label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    color: #37474f;
+    background: rgba(255, 215, 64, 0.85);
+    // border: 1px solid rgb(255, 215, 64);
+    border-radius: 4px;
+  }
+
   .primary {
     font-family: "Segoe UI Light";
     font-size: 45px;
     line-height: 45px;
-    color: white;
   }
 
   .secondary {
     font-family: "Segoe UI Light";
     font-size: 20px;
-    color: white;
   }
 }
 
@@ -62,7 +72,7 @@
     flex-grow: 0;
     flex-shrink: 0;
     //height: 40px;
-    padding: 10px;
+    padding: 10px 16px;
     box-sizing: border-box;
     border-bottom: 1px solid #eceff1;
 
@@ -87,9 +97,16 @@
         margin-right: 10px;
         font-family: "Segoe UI Light";
         font-size: 19px;
-        color: #ad1457;
-        background: #eceff1;
+        color: #607d8b;
+        background: #e0e0e0;
         border-radius: 50%;
+
+        .initials {
+          display: flex;
+          justify-self: center;
+          align-self: center;
+          line-height: 19px;
+        }
       }
 
       .user-description {
