--- a/projects/aho-requests/src/app/aho-requests/components/aho-requests-list/aho-requests-list.component.less
+++ b/projects/aho-requests/src/app/aho-requests/components/aho-requests-list/aho-requests-list.component.less
@@ -18,7 +18,7 @@
         padding: 10px;
         vertical-align: top;
         font-weight: normal !important;
-        border-top: 1px dotted @request-border-color;
+        // border-top: 1px dotted @request-border-color;
         border-bottom: 1px dotted @request-border-color;
 
         &.request-meta-details {
