--- a/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/request-details/request-details.component.html
@@ -183,10 +183,10 @@
                   <div class="mt-3 p-3 border-top">
                     <div class="row pl-0 pr-0">
                       <div class="col-6">
-                        <button mat-flat-button color="primary" *ngIf="isRequestChanged" class="w-100">Сохранить изменения</button>
+                        <button mat-flat-button color="primary" *ngIf="isRequestChanged" class="w-100">Сохранить</button>
                       </div>
                       <div class="col-6">
-                        <button mat-flat-button color="warn" *ngIf="isRequestChanged" class="w-100">Отменить изменения</button>
+                        <button mat-flat-button color="warn" *ngIf="isRequestChanged" class="w-100">Отменить</button>
                       </div>
                     </div>
                   </div>
