--- a/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
+++ b/projects/aho-requests/src/app/aho-requests/components/requests-list/requests-list.component.html
@@ -9,7 +9,7 @@
 
   <!-- Start: Список заявок -->
   <div class="row no-gutters d-flex flex-column" style="flex: 1;">
-    <div class="col-12 d-flex flex-column pt-0 pt-md-3" style="flex: 1;">
+    <div class="col-12 d-flex flex-column" style="flex: 1;">
       <app-aho-requests-list [requests]="(requests$ | async)"></app-aho-requests-list>
     </div>
   </div>
