--- a/projects/event-sheduler/src/app/event-sheduler/components/request-add-dialog/request-add-dialog.component.less
+++ b/projects/event-sheduler/src/app/event-sheduler/components/request-add-dialog/request-add-dialog.component.less
@@ -130,8 +130,10 @@
         margin-top: 20px;
         padding-left: 15px;
         padding-right: 15px;
-        font-family: "Segoe UI Light";
-        font-size: 24px;
+        // font-family: "Segoe UI Light";
+        font-family: 'Comfortaa', cursive;
+        font-weight: 600;
+        font-size: 17px;
         line-height: 18px;
         color: #546e7a;
       }
@@ -140,7 +142,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        margin-top: 30px;
+        margin-top: 40px;
         margin-bottom: 30px;
 
         .form-step {
@@ -209,8 +211,10 @@
               flex-direction: row;
               // align-items: flex-end;
               height: 50%;
-              font-family: "Segoe UI";
-              font-size: 16px;
+              // font-family: "Segoe UI";
+              font-family: 'Comfortaa', cursive;
+              font-weight: 500;
+              font-size: 15px;
               color: #90a4ae;
             }
 
@@ -219,9 +223,10 @@
               flex-direction: row;
               // align-items: flex-start;
               height: 50%;
-              // font-family: "Segoe UI Light";
-              font-size: 13px;
-              color: #b0bec5;
+              font-family: 'Comfortaa', cursive;
+              font-size: 12px;
+              font-weight: 400;
+              color: #9e9e9e;
             }
           }
 
@@ -286,6 +291,8 @@
       }
     }
   }
+
+
 
   .time {
     .mat-form-field-label-wrapper {
